@@ -542,6 +542,14 @@ Release 2.7.0 - UNRELEASED
     HDFS-7696. In FsDatasetImpl, the getBlockInputStream(..) and
     getTmpInputStreams(..) methods may leak file descriptors.  (szetszwo)
 
+    HDFS-6651. Deletion failure can leak inodes permanently.
+    (Jing Zhao via wheat9)
+
+    HDFS-7707. Edit log corruption due to delayed block removal again.
+    (Yongjun Zhang via kihwal)
+
+    HDFS-7734. Class cast exception in NameNode#main. (yliu via wang)
+
 Release 2.6.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
